--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/jackmcd4/MM#readme",
   "dependencies": {
+    "angular": "^1.4.5",
+    "angular-route": "^1.4.7",
+    "angular-ui-router": "^0.2.15",
     "body-parser": "^1.13.3",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "method-override": "^2.3.5"
   }
 }
