--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jackmcd4/MM#readme",
   "dependencies": {
     "angular": "^1.4.5",
+    "angular-animate": "^1.4.7",
     "angular-route": "^1.4.7",
     "angular-ui-router": "^0.2.15",
     "express": "^4.13.3"
