--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "angular": "^1.4.5",
     "angular-animate": "^1.4.7",
+    "angular-bootstrap-lightbox": "^0.10.0",
     "angular-route": "^1.4.7",
+    "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
     "express": "^4.13.3"
   }
