--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/jackmcd4/MM#readme",
   "dependencies": {
-    "angular": "^1.4.5",
-    "angular-animate": "^1.4.7",
+    "angular": "~1.3.0",
+    "angular-animate": "~1.3.0",
     "angular-bootstrap-lightbox": "^0.10.0",
-    "angular-route": "^1.4.7",
+    "angular-masonry": "^0.13.0",
+    "angular-route": "~1.3.0",
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "jquery-bridget": "^1.1.0"
   }
 }
